--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -461,3 +461,104 @@ series:
         url: https://www.meetup.com/Applifting-meetup-1/events/281354506/
         dtstart: 2021-10-26 18:00:00+02:00
         dtend: 2021-10-26 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Apr 12, 6:00 PM  CEST: Does your heart beat to the rhythm of iOS?
+
+        Then don''t miss our next Crew Talk.
+
+
+        You can look forward to a panel discussion of three iOS experts: Michal Svěrák from Applifti'
+      og_title: 'iOS Crew Talk: How juniors become seniors and other secrets of iOS team mgmt, Tue, Apr 12, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/Applifting-meetup-1/events/284781337/
+      ical:
+        summary: 'iOS Crew Talk: How juniors become seniors and other secrets of iOS team mgmt'
+        description: 'Applifting Crew Talk
+
+          Tuesday, April 12 at 6:00 PM
+
+
+          Does your heart beat to the rhythm of iOS? Then don''t miss our next Crew Talk.  You can look forward to a panel discussion of three iOS experts: Micha...
+
+
+          https://www.meetup.com/Applifting-meetup-1/events/284781337/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284781337@meetup.com
+        url: https://www.meetup.com/Applifting-meetup-1/events/284781337/
+        dtstart: 2022-04-12 18:00:00+02:00
+        dtend: 2022-04-12 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Feb 22, 6:00 PM  CET: 💡 Interested in everything about the modern web? Do you want to know what criteria it should meet and what tools can help you with that? Then don''t miss the meetup on the '
+      og_title: 'FE Crew Talk: The Present and Future of the Modern Web, Tue, Feb 22, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/Applifting-meetup-1/events/283681829/
+      ical:
+        summary: 'FE Crew Talk: The Present and Future of the Modern Web'
+        description: 'Applifting Crew Talk
+
+          Tuesday, February 22 at 6:00 PM
+
+
+          💡 Interested in everything about the modern web? Do you want to know what criteria it should meet and what tools can help you with that? Then don''t mi...
+
+
+          https://www.meetup.com/Applifting-meetup-1/events/283681829/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283681829@meetup.com
+        url: https://www.meetup.com/Applifting-meetup-1/events/283681829/
+        dtstart: 2022-02-22 18:00:00+01:00
+        dtend: 2022-02-22 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Feb 15, 6:30 PM  CET: 💡 Do you have an idea for a business but don''t know how to ensure its validity and viability? Want to make sure it has a chance of success? Wondering how to get relevant f'
+      og_title: 'Product Crew Talk: Can your idea become a success?, Tue, Feb 15, 2022, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/Applifting-meetup-1/events/283625028/
+      ical:
+        summary: 'Product Crew Talk: Can your idea become a success?'
+        description: 'Applifting Crew Talk
+
+          Tuesday, February 15 at 6:30 PM
+
+
+          💡 Do you have an idea for a business but don''t know how to ensure its validity and viability? Want to make sure it has a chance of success? Wondering ...
+
+
+          https://www.meetup.com/Applifting-meetup-1/events/283625028/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283625028@meetup.com
+        url: https://www.meetup.com/Applifting-meetup-1/events/283625028/
+        dtstart: 2022-02-15 18:30:00+01:00
+        dtend: 2022-02-15 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Oct 26, 6:00 PM  CEST: Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na našem online tematickém meetupu online ( který ale proběhne konečně i naživo). Na co se můžete těšit? Pop'
+      og_title: 'Backend meetup: Architektura, mýty o OOP a těžký život backenďáka, Tue, Oct 26, 2021, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/Applifting-meetup-1/events/281354506/
+      ical:
+        summary: 'Backend meetup: Architektura, mýty o OOP a těžký život backenďáka'
+        description: 'Applifting Crew Talk
+
+          Tuesday, October 26 at 6:00 PM
+
+
+          Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na našem online tematickém meetupu online ( který ale proběhne konečně i naživo). Na c...
+
+
+          https://www.meetup.com/Applifting-meetup-1/events/281354506/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281354506@meetup.com
+        url: https://www.meetup.com/Applifting-meetup-1/events/281354506/
+        dtstart: 2021-10-26 18:00:00+02:00
+        dtend: 2021-10-26 21:00:00+02:00
