--- a/data/sources/brno-java-meetup.yaml
+++ b/data/sources/brno-java-meetup.yaml
@@ -255,3 +255,53 @@ series:
         url: https://www.meetup.com/Brno-Java-Meetup/events/284243439/
         dtstart: 2022-03-17 18:30:00+01:00
         dtend: 2022-03-17 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, May 5, 6:30 PM  CEST: Microservice architektura je principiálně distribuovaný systém se všemi výhodami i těžkostmi. Martin Štefanko ([https://twitter.com/xstefank](https://twitter.com/xstefank))'
+      og_title: Transakce v microservice architekturách, Thu, May 5, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/Brno-Java-Meetup/events/285414870/
+      ical:
+        summary: Transakce v microservice architekturách
+        description: 'Brno Java Meetup
+
+          Thursday, May 5 at 6:30 PM
+
+
+          Microservice architektura je principiálně distribuovaný systém se všemi výhodami i těžkostmi. Martin Štefanko ((https://twitter.com/xstefank" class="l...
+
+          \nhttps://www.meetup.com/Brno-Java-Meetup/events/285414870/'
+        location: Živo U Palečka (Koliště 643, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_285414870@meetup.com
+        url: https://www.meetup.com/Brno-Java-Meetup/events/285414870/
+        dtstart: 2022-05-05 18:30:00+02:00
+        dtend: 2022-05-05 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Mar 17, 6:30 PM  CET: Anebo raději When Java has to Go?
+
+
+        [Jakub](https://github.com/coufalja) s [Peterem](https://www.linkedin.com/in/peter-siman-31042658/?originalSubdomain=cz) pracují pro Jamf'
+      og_title: Na cestě od Javy ke Go, Thu, Mar 17, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/Brno-Java-Meetup/events/284243439/
+      ical:
+        summary: Na cestě od Javy ke Go
+        description: 'Brno Java Meetup
+
+          Thursday, March 17 at 6:30 PM
+
+
+          Anebo raději When Java has to Go? (https://github.com/coufalja) s (https://www.linkedin.com/in/peter-siman-31042658/?originalSubdomain=cz) pracují pro...
+
+
+          https://www.meetup.com/Brno-Java-Meetup/events/284243439/'
+        location: Živo U Palečka (Koliště 643, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_284243439@meetup.com
+        url: https://www.meetup.com/Brno-Java-Meetup/events/284243439/
+        dtstart: 2022-03-17 18:30:00+01:00
+        dtend: 2022-03-17 20:30:00+01:00
