data: cron update

--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -493,3 +493,29 @@ series:
         url: https://www.meetup.com/praguejs/events/285335331/
         dtstart: 2022-04-26 18:30:00+02:00
         dtend: 2022-04-26 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, May 31, 6:30 PM  CEST: Get out and get social in 2022 : come out and discuss JS together!
+
+        Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
+      og_title: '2022 #5 Web3, Tue, May 31, 2022, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/praguejs/events/285600611/
+      ical:
+        summary: '2022 #5 Web3'
+        description: 'PragueJS
+
+          Tuesday, May 31 at 6:30 PM
+
+
+          Get out and get social in 2022 : come out and discuss JS together!Get in touch with the organizers with any questions you have. We welcome a diverse r...
+
+
+          https://www.meetup.com/praguejs/events/285600611/'
+        location: Kasárna Karlín (Prvního pluku 20/2, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285600611@meetup.com
+        url: https://www.meetup.com/praguejs/events/285600611/
+        dtstart: 2022-05-31 18:30:00+02:00
+        dtend: 2022-05-31 20:30:00+02:00
