--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -1,10 +1,58 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/pydata-prague/events/279339785/
-    meta_description: 'Tue, Jul 13, 6:30 PM  CEST: Hello PyData lovers,
+    url: https://www.meetup.com/PyData-Prague/
+    meta_description: PyData Prague aims to unite data analysts, engineers, scientists, and others involved in the usage, developments, and support of open source technologies in the area of scientific computation. These i
+    og_title: PyData Prague (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/a/e/9/d/600_503684701.jpeg
+  events:
+  - meetupcom:
+      meta_description: 'Tue, May 10, 6:00 PM  CEST: Hello data-devourers and Python conjurers!
 
 
-      it''s been a while since our last (on-line, not to mention in-person) PyData meet-up. We are sorry for not having arranged anything in the lockdown per'
-    og_title: 'PyData Prague #9 - Reinforcement Yearning, Tue, Jul 13, 2021, 6:30 PM   | Meetup'
-    image: https://secure.meetupstatic.com/photos/event/5/c/1/b/600_497483579.jpeg
-  events: []
+        We haven''t had a proper in-person meeting with talks for ages but now we are back with a perfect venue (CreativeDock) and two ta'
+      og_title: 'PyData Prague #10 - Pandemic Lite, Tue, May 10, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/PyData-Prague/events/285562340/
+      ical:
+        summary: 'PyData Prague #10 - Pandemic Lite'
+        description: 'PyData Prague
+
+          Tuesday, May 10 at 6:00 PM
+
+
+          Hello data-devourers and Python conjurers! We haven''t had a proper in-person meeting with talks for ages but now we are back with a perfect venue (Cre...
+
+
+          https://www.meetup.com/PyData-Prague/events/285562340/'
+        location: CreativeDock (Františka Křížka 490/4, Holešovice, Praha-Praha 7, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285562340@meetup.com
+        url: https://www.meetup.com/PyData-Prague/events/285562340/
+        dtstart: 2022-05-10 18:00:00+02:00
+        dtend: 2022-05-10 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 28, 8:30 AM  CEST: The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyData provides a virtual'
+      og_title: PyData Global 2021 (GLOBAL ONLINE CONFERENCE), Thu, Oct 28, 2021, 8:30 AM   | Meetup
+      url: https://www.meetup.com/PyData-Prague/events/281281117/
+      ical:
+        summary: PyData Global 2021 (GLOBAL ONLINE CONFERENCE)
+        description: 'PyData Prague
+
+          Thursday, October 28 at 8:30 AM
+
+
+          The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyD...
+
+
+          https://www.meetup.com/PyData-Prague/events/281281117/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281281117@meetup.com
+        url: https://www.meetup.com/PyData-Prague/events/281281117/
+        dtstart: 2021-10-28 08:30:00+02:00
+        dtend: 2021-10-31 00:30:00+02:00
