--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -167,3 +167,30 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
         dtstart: 2022-05-19 18:00:00+02:00
         dtend: 2022-05-19 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, May 19, 6:00 PM  CEST: Zveme vás na 48. setkání PHP vývojářů do Prahy 9 - Hloubětína, kde sídlí partner květnového setkání, společnost Cortex.
+
+
+        Mimo dalších zajímavých přednášek a networkingu můž'
+      og_title: 48. sraz přátel PHP v Cortex v Praze, Thu, May 19, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
+      ical:
+        summary: 48. sraz přátel PHP v Cortex v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, May 19 at 6:00 PM
+
+
+          Zveme vás na 48. setkání PHP vývojářů do Prahy 9 - Hloubětína, kde sídlí partner květnového setkání, společnost Cortex. Mimo dalších zajímavých předná...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/'
+        location: Cortex, a.s. (U Elektry 974, Praha 9, Czech Republic 190 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285475940@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
+        dtstart: 2022-05-19 18:00:00+02:00
+        dtend: 2022-05-19 22:00:00+02:00
