--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -55,3 +55,27 @@ series:
         url: https://www.meetup.com/MSD-IT-Meet-Ups/events/273587090/
         dtstart: 2020-10-06 18:00:00+02:00
         dtend: 2020-10-06 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 21, 6:00 PM  CEST: Come to our meetup to learn how we create enterprise-grade, human-centric AI solutions. We will cover topics such as Deep Learning for digital pathology, Natural Language P'
+      og_title: Machine Learning Open House, Tue, Jun 21, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/MSD-IT-Meet-Ups/events/285416336/
+      ical:
+        summary: Machine Learning Open House
+        description: 'MSD IT Meet Ups
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          Come to our meetup to learn how we create enterprise-grade, human-centric AI solutions. We will cover topics such as Deep Learning for digital patholo...
+
+
+          https://www.meetup.com/MSD-IT-Meet-Ups/events/285416336/'
+        location: MSD building FIVE (Na Valentince 504, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285416336@meetup.com
+        url: https://www.meetup.com/MSD-IT-Meet-Ups/events/285416336/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 19:30:00+02:00
