--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -6,6 +6,13 @@ series:
     og_title: Productboard Meetups (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/6/d/a/5/600_498268069.jpeg
   events:
+  - id: 20220615frontend
+    url: https://www.eventbrite.com/e/frontend-meetup-5-tickets-332768057217
+    title: Frontend Meetup #5
+    date: 2022-06-15
+    venue:
+      name: ProductBoard HQ
+      address: Boudníkova 2506/3, 180 00 Praha 8
   - meetupcom:
       meta_description: 'Wed, Sep 15, 2021, 6:00 PM: Productboard Meetups are back! And they will be better than ever!During the pandemic, we moved into new offices, which have already been named Best Startup Office of the Ye'
       og_title: Frontend Meetup PRG
