--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -1,5 +1,10 @@
 series:
   id: strv-prague
+  meetupcom:
+    url: https://www.meetup.com/STRV-Meetups/
+    meta_description: Developer & Designer Meetups:Regular technical meetings with designers and developers focused on current topics and news. We usually organize one every month and we are open to everyone who is interes
+    og_title: STRV Meetups (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/a/f/9/0/600_469304944.jpeg
   events:
   - id: 202109-strv-android-meetup
     url: https://www.eventbrite.com/e/android-meetup-prg-tickets-165141916919
@@ -8,4 +13,108 @@ series:
     venue:
       name: STRV
       address: Rohanské nábřeží 23 (7th floor), 186 00 Prague
-      
+  - meetupcom:
+      meta_description: 'Thu, May 5, 6:00 PM  CEST: **iOS fans! Have you heard?**
+
+
+        The **[STRV Academy](https://www.strv.com/academy/mastering-the-ios-craft)** is back! Join us for [five weeks](https://www.strv.com/academy/m'
+      og_title: 'STRV Academy: Mastering the iOS Craft, Thu, May 5, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/STRV-Meetups/events/285122803/
+      ical:
+        summary: 'STRV Academy: Mastering the iOS Craft'
+        description: 'STRV Meetups
+
+          Thursday, May 5 at 6:00 PM
+
+
+          **iOS fans! Have you heard?** The **(https://www.strv.com/academy/mastering-the-ios-craft)** is back! Join us for (https://www.strv.com/academy/master...
+
+
+          https://www.meetup.com/STRV-Meetups/events/285122803/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285122803@meetup.com
+        url: https://www.meetup.com/STRV-Meetups/events/285122803/
+        dtstart: 2022-05-05 18:00:00+02:00
+        dtend: 2022-05-05 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, May 10, 6:00 PM  CEST: It''s here! The **STRV Academy: Frontend** kicks off on May 10. Join us for **eight weeks** filled with expert knowledge and loads of fun. Learn the best practices to naviga'
+      og_title: 'STRV Academy: Frontend, Tue, May 10, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/STRV-Meetups/events/285056833/
+      ical:
+        summary: 'STRV Academy: Frontend'
+        description: 'STRV Meetups
+
+          Tuesday, May 10 at 6:00 PM
+
+
+          It''s here! The **STRV Academy: Frontend** kicks off on May 10. Join us for **eight weeks** filled with expert knowledge and loads of fun. Learn the be...
+
+
+          https://www.meetup.com/STRV-Meetups/events/285056833/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285056833@meetup.com
+        url: https://www.meetup.com/STRV-Meetups/events/285056833/
+        dtstart: 2022-05-10 18:00:00+02:00
+        dtend: 2022-05-10 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jun 9, 6:00 PM  CEST: 🔥[Sign up on our website]( https://www.strv.com/academy/backend ) 🔥
+
+
+        STRV’s Backend team is the backbone of every project. It’s not only about developing the backend but '
+      og_title: 'STRV Academy: Backend, Thu, Jun 9, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/STRV-Meetups/events/285436855/
+      ical:
+        summary: 'STRV Academy: Backend'
+        description: 'STRV Meetups
+
+          Thursday, June 9 at 6:00 PM
+
+
+          🔥( https://www.strv.com/academy/backend ) 🔥 STRV’s Backend team is the backbone of every project. It’s not only about developing the backend but about...
+
+
+          https://www.meetup.com/STRV-Meetups/events/285436855/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285436855@meetup.com
+        url: https://www.meetup.com/STRV-Meetups/events/285436855/
+        dtstart: 2022-06-09 18:00:00+02:00
+        dtend: 2022-06-09 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Apr 28, 6:30 PM  CEST: NFTs have quickly snuck into various industries, like gaming, fashion and entertainment. Let’s talk about it with people that know their stuff.
+
+
+        **The biggest STRV events a'
+      og_title: 'STRV Next Level Talks: NFT - Beyond the Buzzword, Thu, Apr 28, 2022, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/STRV-Meetups/events/285100441/
+      ical:
+        summary: 'STRV Next Level Talks: NFT - Beyond the Buzzword'
+        description: 'STRV Meetups
+
+          Thursday, April 28 at 6:30 PM
+
+
+          NFTs have quickly snuck into various industries, like gaming, fashion and entertainment. Let’s talk about it with people that know their stuff.  **The...
+
+
+          https://www.meetup.com/STRV-Meetups/events/285100441/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285100441@meetup.com
+        url: https://www.meetup.com/STRV-Meetups/events/285100441/
+        dtstart: 2022-04-28 18:30:00+02:00
+        dtend: 2022-04-28 22:00:00+02:00
