--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -536,7 +536,7 @@ series:
 
 
           https://www.meetup.com/Pure-Storage-Talks/events/285674292/'
-        location: null
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
