--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -580,3 +580,24 @@ series:
         url: https://www.meetup.com/Praguerb/events/284680672/
         dtstart: 2022-04-06 19:00:00+02:00
         dtend: 2022-04-06 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Sep 7, 7:00 PM  CEST: '
+      og_title: First Wednesday Of The Month - Ruby, Wed, Sep 7, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/Praguerb/events/dkmktfydcmbkb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, September 7 at 7:00 PM
+
+
+          https://www.meetup.com/Praguerb/events/dkmktfydcmbkb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcmbkb@meetup.com
+        url: https://www.meetup.com/Praguerb/events/dkmktfydcmbkb/
+        dtstart: 2022-09-07 19:00:00+02:00
+        dtend: 2022-09-07 22:00:00+02:00
