data: cron update

--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -611,10 +611,10 @@ series:
 
 
         We are excited to announce our first in-person meetup in Prague this year. Please come and join us on Wednesday, May 25th, at 6pm CET for some light refreshme'
-      og_title: Explainable AI and No-code Deep Learning with H2O, Wed, May 25, 2022, 6:00 PM   | Meetup
+      og_title: Explainable AI, No-code Deep Learning, and Building AI Apps with H2O, Wed, May 25, 2022, 6:00 PM   | Meetup
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/285593046/
       ical:
-        summary: Explainable AI and No-code Deep Learning with H2O
+        summary: Explainable AI, No-code Deep Learning, and Building AI Apps with H2O
         description: 'Prague Artificial Intelligence & Deep Learning
 
           Wednesday, May 25 at 6:00 PM
