--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -503,3 +503,27 @@ series:
         url: https://www.meetup.com/czskppug/events/mdhkssydclbpb/
         dtstart: 2022-08-11 17:00:00+02:00
         dtend: 2022-08-11 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, May 12, 5:00 PM  CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: CZSK PPUG Meetup, Thu, May 12, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/285795305/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, May 12 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/285795305/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285795305@meetup.com
+        url: https://www.meetup.com/czskppug/events/285795305/
+        dtstart: 2022-05-12 17:00:00+02:00
+        dtend: 2022-05-12 19:00:00+02:00
