--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -664,3 +664,29 @@ series:
         url: https://www.meetup.com/asociace-ux/events/285467847/
         dtstart: 2022-05-02 18:00:00+02:00
         dtend: 2022-05-02 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Mon, May 23, 9:30 AM  CEST: Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.
+
+        Akci organizují Výzkumatky – Volné sdružení výzkumnic s odbornými zk'
+      og_title: 'Research Tuesday: Jak zkoumat citlivá témata a neublížit? , Mon, May 23, 2022, 9:30 AM   | Meetup'
+      url: https://www.meetup.com/asociace-ux/events/285517158/
+      ical:
+        summary: 'Research Tuesday: Jak zkoumat citlivá témata a neublížit? '
+        description: 'Asociace UX
+
+          Monday, May 23 at 9:30 AM
+
+
+          Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.Akci organizují Výzkumatky – Volné sdružení výz...
+
+
+          https://www.meetup.com/asociace-ux/events/285517158/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285517158@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/285517158/
+        dtstart: 2022-05-23 09:30:00+02:00
+        dtend: 2022-05-23 12:30:00+02:00
