--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1330,7 +1330,7 @@ series:
 
         '
       og_title: GDG Garage Prague One, Tue, May 10, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/GDGPrague/events/xqcsqsydchbnb/
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydchbnb/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -1366,7 +1366,7 @@ series:
 
         '
       og_title: GDG Garage Prague One, Tue, May 24, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/GDGPrague/events/xqcsqsydchbgc/
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydchbgc/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -1402,7 +1402,7 @@ series:
 
         '
       og_title: GDG Garage Prague One, Tue, Jun 7, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydcjbkb/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -1438,7 +1438,7 @@ series:
 
         '
       og_title: GDG Garage Prague One, Tue, Jun 21, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydcjbcc/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -1495,3 +1495,39 @@ series:
         url: https://www.meetup.com/GDGPrague/events/285105623/
         dtstart: 2022-04-26 18:30:00+02:00
         dtend: 2022-04-26 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jul 5, 6:30 PM  CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Jul 5, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydckbhb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, July 5 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/xqcsqsydckbhb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydckbhb@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/xqcsqsydckbhb/
+        dtstart: 2022-07-05 18:30:00+02:00
+        dtend: 2022-07-05 20:30:00+02:00
